# AD9833-function-generator

./: .cproject  .mxproject  .project  AD9833-function-generator Debug.launch  AD9833-function-generator.ioc  CH32V00x.ld  CMakeLists.txt  README.md  STM32F103C8TX_FLASH.ld  main.c
Core/Inc/: main.h  stm32f1xx_it.h
Core/Src/: gpio.c  main.c  spi.c  stm32f1xx_it.c  tim.c
DDS/: dds.c  dds.h
EEPROM/: eeprom.c  eeprom.h
Encoder/: encoder.c  encoder.h
GUI/: gui.c  gui.h
HD44780/: hd44780.c  hd44780.h  hd44780_io.c  hd44780_io.h
Settings/: settings.c  settings.h
Utils/: utils.h
cmake/: toolchain.cmake
dds/: dds.c  dds.h
drivers/delay/: delay.c  delay.h
drivers/eeprom/: eeprom.c  eeprom.h
drivers/gpio/: gpio.c  gpio.h
drivers/i2c/: i2c.c  i2c.h
drivers/spi/: spi.c  spi.h
encoder/: encoder.c  encoder.h
error_handler/: error_handler.c  error_handler.h
gui/: gui.c  gui.h
hd44780/: hd44780.h  hd44780_io.c
settings/: settings.c  settings.h
startup/: startup_ch32v00x.S
system/: system_ch32v00x.c
timer/: timer.c  timer.h
utils/: utils.h
